--- a/新建文本文档.html
+++ b/新建文本文档.html
@@ -16,7 +16,7 @@
         <h3>曹县一环</h3>
         <h3>曹县二环</h3>
         <h3>曹县三环</h3>
-        <a href="./index.less">曹县直通车</a>
+        <a href="./index.html">曹县直通车</a>
     </div>
 </body>
 
